# imgchest-rs

./: Cargo.toml  README.md  crates.js  deny.toml  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: CI.yml
imgchest/: Cargo.toml  all.html  enum.Error.html  enum.InvalidPostError.html  enum.InvalidPostImageError.html  enum.InvalidScrapedPostError.html  enum.InvalidScrapedPostFileError.html  enum.InvalidScrapedUserError.html  enum.PostPrivacy.html  enum.SortOrder.html  index.html  sidebar-items.js  struct.Body.html  struct.Client.html  struct.CookieStore.html  struct.CookieStoreMutex.html  struct.CreatePostBuilder.html  struct.FileUpdate.html  struct.ListPostsBuilder.html  struct.ListPostsPost.html  struct.Post.html  struct.PostFile.html  struct.PostImage.html  struct.RawCookie.html  struct.ScrapedPost.html  struct.ScrapedPostFile.html  struct.ScrapedUser.html  struct.UpdatePostBuilder.html  struct.UploadPostFile.html  struct.Url.html  struct.User.html
imgchest-cli/: Cargo.toml
imgchest-cli/src/: command.rs  default-config.toml  main.rs  user_config.rs  util.rs
imgchest-cli/src/command/: config.rs  default-config.toml  download.rs  list_posts.rs  profile.rs
imgchest/client/: enum.SortOrder.html  struct.Client.html  struct.CreatePostBuilder.html  struct.ListPostsBuilder.html  struct.UpdatePostBuilder.html  struct.UploadPostFile.html
imgchest/client/builder/: enum.SortOrder.html  struct.CreatePostBuilder.html  struct.ListPostsBuilder.html  struct.UpdatePostBuilder.html  struct.UploadPostFile.html
imgchest/model/: struct.FileUpdate.html
imgchest/model/list_posts/: struct.ListPostsPost.html
imgchest/model/post/: enum.Privacy.html  struct.File.html  struct.Post.html
imgchest/model/scraped_post/: enum.FromElementError.html  enum.FromHtmlError.html  struct.File.html  struct.ScrapedPost.html
imgchest/model/scraped_user/: enum.FromHtmlError.html  struct.ScrapedUser.html
imgchest/model/user/: struct.User.html
imgchest/post/: enum.FromElementError.html  enum.FromHtmlError.html  struct.Image.html  struct.Post.html
imgchest/src/: client.rs  lib.rs  model.rs  serde.rs
imgchest/src/client/: builder.rs
imgchest/src/model/: list_posts.rs  post.rs  scraped_post.rs  scraped_user.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
search.desc/imgchest/: imgchest-desc-0-.js
src/imgchest/: client.rs.html  lib.rs.html  model.rs.html  post.rs.html  serde.rs.html
src/imgchest/client/: builder.rs.html
src/imgchest/model/: list_posts.rs.html  post.rs.html  scraped_post.rs.html  scraped_user.rs.html  user.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/serde_core/de/: trait.Deserialize.js
trait.impl/serde_core/ser/: trait.Serialize.js
