[package]
name = "imgchest-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "imgchest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
argh = "0.1.12"
directories-next = "2.0.0"
imgchest = { version = "0.0.0", path = "../imgchest", default-features = false }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0", features = ["download-to-path"] }
opener = "0.7.2"
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["rt-multi-thread"] }
url = "2.5.4"

[features]
default = [
    "rustls-tls",
]
native-tls = [
    "imgchest/native-tls",
]
rustls-tls = [
    "imgchest/rustls-tls",
]
