[package]
name = "imgchest-cli"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "imgchest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
directories-next = "2.0.0"
imgchest = { version = "0.0.0", path = "../imgchest", default-features = false }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0", features = ["download-to-path"] }
opener = "0.8.2"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
toml_edit = "0.22.27"
url = "2.5.4"

[features]
default = [
    "rustls-tls",
]
native-tls = [
    "imgchest/native-tls",
]
rustls-tls = [
    "imgchest/rustls-tls",
]
