[package]
name = "imgchest"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
itoa = "1.0.15"
once_cell = { version = "1.21.3", default-features = false, features = [ "std" ] }
reqwest = { version = "0.12.24", features = [ "cookies", "http2", "json", "multipart", "stream" ], default-features = false }
reqwest_cookie_store = "0.9.0"
serde = { version = "1.0.228", features = [ "derive" ]}
serde_json = "1.0.145"
scraper = { version = "0.24.0", default-features = false }
thiserror = "2.0.17"
tokio = "1.48.0"
time = { version = "0.3.44", features = [ "serde", "parsing", "formatting" ] }
tokio-util = "0.7.16"
jiff = "0.2.15"

[dev-dependencies]
tokio = { version = "1.48.0", features = [ "macros" ] }

[features]
default = [ "rustls-tls" ]
native-tls = [ "reqwest/native-tls" ]
rustls-tls = [ "reqwest/rustls-tls" ]
